--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^8.6.0"
+    "mongoose": "^8.6.0",
+    "sass": "^1.77.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
